--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   :root{
     --text:#f2f6ff;
     --muted:#a8b3c7;
-    --stroke: rgba(255,255,255,.12);
 
     --blue:#4aa3ff;
     --purple:#a78bfa;
@@ -27,6 +26,22 @@
 
   *{box-sizing:border-box}
   html,body{height:100%}
+
+  /* ===== Lock interactions (no select / no copy highlighting) ===== */
+  html, body{
+    -webkit-user-select: none;
+    user-select: none;
+    -webkit-touch-callout: none;
+  }
+  *{
+    -webkit-user-select: none;
+    user-select: none;
+  }
+  input, textarea{
+    -webkit-user-select: auto;
+    user-select: auto;
+  }
+
   body{
     margin:0;
     font-family:"Segoe UI",system-ui,-apple-system,Roboto,Arial,sans-serif;
@@ -72,42 +87,8 @@
     touch-action:none;
   }
 
-  /* ===== guns.lol-ish hover ===== */
-  .tilt{
-    width:100%;
-    transform-style:preserve-3d;
-    will-change:transform;
-    transition:transform .14s ease;
-    position:relative;
-  }
-  .tilt::before{
-    content:"";
-    position:absolute; inset:-2px;
-    border-radius: calc(var(--radius) + 2px);
-    background: radial-gradient(760px 380px at var(--mx,50%) var(--my,50%),
-      rgba(74,163,255,.22),
-      rgba(167,139,250,.12) 42%,
-      transparent 64%);
-    opacity:0;
-    transition: opacity .14s ease;
-    pointer-events:none;
-    filter: blur(2px);
-  }
-  .tilt::after{
-    content:"";
-    position:absolute; inset:-1px;
-    border-radius: calc(var(--radius) + 1px);
-    background: linear-gradient(120deg,
-      rgba(74,163,255,0),
-      rgba(74,163,255,.22),
-      rgba(167,139,250,.18),
-      rgba(74,163,255,0));
-    opacity:0;
-    transition: opacity .14s ease;
-    pointer-events:none;
-    filter: blur(12px);
-  }
-  .tilt:hover::before,.tilt:hover::after{opacity:1}
+  /* wrapper kept, but NO glow/tilt */
+  .tilt{ width:100%; }
 
   /* ===== Window ===== */
   .window{
@@ -182,10 +163,8 @@
   .winbtn.close:hover{background:rgba(239,68,68,.26)}
   .winbtn:active{transform: translateY(0.5px);}
 
-  /* ===== Content redesign ===== */
-  .content{
-    padding:18px 18px 16px;
-  }
+  /* ===== Clean content redesign ===== */
+  .content{ padding:18px 18px 16px; }
 
   .topRow{
     display:flex;
@@ -194,11 +173,7 @@
     padding:8px 6px 10px;
   }
 
-  .avatarWrap{
-    width:84px; height:84px;
-    position:relative;
-    flex:0 0 auto;
-  }
+  .avatarWrap{ width:84px; height:84px; position:relative; flex:0 0 auto; }
   .avatar{
     width:84px; height:84px;
     border-radius:16px;
@@ -210,10 +185,8 @@
 
   .statusDotCorner{
     position:absolute;
-    right:-2px;
-    bottom:-2px;
-    width:18px;
-    height:18px;
+    right:-2px; bottom:-2px;
+    width:18px; height:18px;
     border-radius:999px;
     background:#0b0d13;
     border:1px solid rgba(255,255,255,.10);
@@ -229,10 +202,7 @@
   .dnd{background:var(--red)!important}
   .offline{background:var(--gray)!important}
 
-  .who{
-    min-width:0;
-    flex:1;
-  }
+  .who{ min-width:0; flex:1; }
   .nameLine{
     display:flex;
     align-items:center;
@@ -291,6 +261,9 @@
     padding:12px;
     overflow:hidden;
   }
+  /* remove any hover glow/move from cards */
+  .card:hover{ background:rgba(255,255,255,.035); border-color:rgba(255,255,255,.10); }
+
   .cardTitle{
     display:flex;
     align-items:center;
@@ -337,7 +310,7 @@
     display:flex;
     gap:10px;
     flex-wrap:wrap;
-    margin-top:12px;
+    margin-top:10px;
   }
   .pill{
     padding:8px 12px;
@@ -351,12 +324,11 @@
   }
   .mono{font-family:ui-monospace,SFMono-Regular,Menlo,Monaco,Consolas,"Liberation Mono","Courier New",monospace}
 
-  /* Icon links */
   .iconLinks{
     display:flex;
     justify-content:flex-start;
     gap:10px;
-    margin-top:12px;
+    margin-top:10px;
     padding:0 2px;
   }
   .iBtn{
@@ -370,14 +342,13 @@
     cursor:pointer;
     transition: transform .12s ease, background .12s ease, border-color .12s ease;
     text-decoration:none;
-    color: rgba(242,246,255,.92);
   }
   .iBtn:hover{
     transform: translateY(-1px);
     background: rgba(255,255,255,.07);
     border-color: rgba(255,255,255,.20);
   }
-  .iBtn svg{ width:22px; height:22px; opacity:.92; }
+  .iBtn svg{ width:22px; height:22px; }
 
   .footer{
     padding:10px 15px;
@@ -597,7 +568,7 @@
 
   <div class="stage">
     <div class="dragWrap" id="dragWrap">
-      <div class="tilt" id="tilt">
+      <div class="tilt">
         <section class="window" id="window">
           <div class="titlebar" id="titlebar">
             <div class="title"><div class="appIcon"></div> discord.exe</div>
@@ -638,26 +609,33 @@
                 </div>
 
                 <div class="iconLinks">
+                  <!-- TikTok -->
                   <a class="iBtn" href="https://www.tiktok.com" target="_blank" rel="noreferrer" title="TikTok">
-                    <svg viewBox="0 0 24 24" fill="none">
-                      <path d="M14 4v10.2a3.8 3.8 0 1 1-3-3.7V8.2a6 6 0 1 0 6 6V9.3c1 .8 2.2 1.3 3.5 1.4V8.1c-1.7-.2-3.1-1.4-3.8-3.1H14Z"
-                            stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/>
+                    <svg fill="#000000" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
+                      <title>tiktok</title>
+                      <path d="M16.656 1.029c1.637-0.025 3.262-0.012 4.886-0.025 0.054 2.031 0.878 3.859 2.189 5.213l-0.002-0.002c1.411 1.271 3.247 2.095 5.271 2.235l0.028 0.002v5.036c-1.912-0.048-3.71-0.489-5.331-1.247l0.082 0.034c-0.784-0.377-1.447-0.764-2.077-1.196l0.052 0.034c-0.012 3.649 0.012 7.298-0.025 10.934-0.103 1.853-0.719 3.543-1.707 4.954l0.020-0.031c-1.652 2.366-4.328 3.919-7.371 4.011l-0.014 0c-0.123 0.006-0.268 0.009-0.414 0.009-1.73 0-3.347-0.482-4.725-1.319l0.040 0.023c-2.508-1.509-4.238-4.091-4.558-7.094l-0.004-0.041c-0.025-0.625-0.037-1.25-0.012-1.862 0.49-4.779 4.494-8.476 9.361-8.476 0.547 0 1.083 0.047 1.604 0.136l-0.056-0.008c0.025 1.849-0.050 3.699-0.050 5.548-0.423-0.153-0.911-0.242-1.42-0.242-1.868 0-3.457 1.194-4.045 2.861l-0.009 0.030c-0.133 0.427-0.21 0.918-0.21 1.426 0 0.206 0.013 0.41 0.037 0.61l-0.002-0.024c0.332 2.046 2.086 3.59 4.201 3.59 0.061 0 0.121-0.001 0.181-0.004l-0.009 0c1.463-0.044 2.733-0.831 3.451-1.994l0.010-0.018c0.267-0.372 0.45-0.822 0.511-1.311l0.001-0.014c0.125-2.237 0.075-4.461 0.087-6.698 0.012-5.036-0.012-10.060 0.025-15.083z"></path>
                     </svg>
                   </a>
 
-                  <a class="iBtn" href="https://discord.gg/r357sBphNu" target="_blank" rel="noreferrer" title="Discord">
-                    <svg viewBox="0 0 24 24" fill="none">
-                      <path d="M8.6 7.4c1-.5 2.2-.8 3.4-.8s2.4.3 3.4.8" stroke="currentColor" stroke-width="1.6" stroke-linecap="round"/>
-                      <path d="M7 8.8c-1 1.7-1.6 3.7-1.6 5.8 1.6 1.2 3.7 1.9 6.6 1.9s5-.7 6.6-1.9c0-2.1-.6-4.1-1.6-5.8-1.2-.7-2.5-1.2-4-1.4l-.6 1" stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/>
-                      <path d="M10 13.2h.01M14 13.2h.01" stroke="currentColor" stroke-width="2.6" stroke-linecap="round"/>
+                  <!-- Discord -->
+                  <a class="iBtn" href="https://discord.com" target="_blank" rel="noreferrer" title="Discord">
+                    <svg viewBox="0 -28.5 256 256" version="1.1" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid">
+                      <path d="M216.856339,16.5966031 C200.285002,8.84328665 182.566144,3.2084988 164.041564,0 C161.766523,4.11318106 159.108624,9.64549908 157.276099,14.0464379 C137.583995,11.0849896 118.072967,11.0849896 98.7430163,14.0464379 C96.9108417,9.64549908 94.1925838,4.11318106 91.8971895,0 C73.3526068,3.2084988 55.6133949,8.86399117 39.0420583,16.6376612 C5.61752293,67.146514 -3.4433191,116.400813 1.08711069,164.955721 C23.2560196,181.510915 44.7403634,191.567697 65.8621325,198.148576 C71.0772151,190.971126 75.7283628,183.341335 79.7352139,175.300261 C72.104019,172.400575 64.7949724,168.822202 57.8887866,164.667963 C59.7209612,163.310589 61.5131304,161.891452 63.2445898,160.431257 C105.36741,180.133187 151.134928,180.133187 192.754523,160.431257 C194.506336,161.891452 196.298154,163.310589 198.110326,164.667963 C191.183787,168.842556 183.854737,172.420929 176.223542,175.320965 C180.230393,183.341335 184.861538,190.991831 190.096624,198.16893 C211.238746,191.588051 232.743023,181.531619 254.911949,164.955721 C260.227747,108.668201 245.831087,59.8662432 216.856339,16.5966031 Z M85.4738752,135.09489 C72.8290281,135.09489 62.4592217,123.290155 62.4592217,108.914901 C62.4592217,94.5396472 72.607595,82.7145587 85.4738752,82.7145587 C98.3405064,82.7145587 108.709962,94.5189427 108.488529,108.914901 C108.508531,123.290155 98.3405064,135.09489 85.4738752,135.09489 Z M170.525237,135.09489 C157.88039,135.09489 147.510584,123.290155 147.510584,108.914901 C147.510584,94.5396472 157.658606,82.7145587 170.525237,82.7145587 C183.391518,82.7145587 193.761324,94.5189427 193.539891,108.914901 C193.539891,123.290155 183.391518,135.09489 170.525237,135.09489 Z"
+                        fill="#5865F2" fill-rule="nonzero"></path>
                     </svg>
                   </a>
 
+                  <!-- YouTube -->
                   <a class="iBtn" href="https://www.youtube.com" target="_blank" rel="noreferrer" title="YouTube">
-                    <svg viewBox="0 0 24 24" fill="none">
-                      <path d="M20 8.4a3 3 0 0 0-2.1-2.2C16.2 5.7 12 5.7 12 5.7s-4.2 0-5.9.5A3 3 0 0 0 4 8.4 31 31 0 0 0 3.7 12c0 1.2.1 2.4.3 3.6A3 3 0 0 0 6.1 18c1.7.5 5.9.5 5.9.5s4.2 0 5.9-.5A3 3 0 0 0 20 15.6c.2-1.2.3-2.4.3-3.6 0-1.2-.1-2.4-.3-3.6Z"
-                            stroke="currentColor" stroke-width="1.6" stroke-linejoin="round"/>
-                      <path d="M11 10.2 14.8 12 11 13.8v-3.6Z" fill="currentColor"/>
+                    <svg viewBox="0 -3 20 20" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="#000000">
+                      <title>youtube</title>
+                      <g fill="none" fill-rule="evenodd">
+                        <g transform="translate(-300.000000, -7442.000000)" fill="#FF0000">
+                          <g transform="translate(56.000000, 160.000000)">
+                            <path d="M251.988432,7291.58588 L251.988432,7285.97425 C253.980638,7286.91168 255.523602,7287.8172 257.348463,7288.79353 C255.843351,7289.62824 253.980638,7290.56468 251.988432,7291.58588 M263.090998,7283.18289 C262.747343,7282.73013 262.161634,7282.37809 261.538073,7282.26141 C259.705243,7281.91336 248.270974,7281.91237 246.439141,7282.26141 C245.939097,7282.35515 245.493839,7282.58153 245.111335,7282.93357 C243.49964,7284.42947 244.004664,7292.45151 244.393145,7293.75096 C244.556505,7294.31342 244.767679,7294.71931 245.033639,7294.98558 C245.376298,7295.33761 245.845463,7295.57995 246.384355,7295.68865 C247.893451,7296.0008 255.668037,7296.17532 261.506198,7295.73552 C262.044094,7295.64178 262.520231,7295.39147 262.895762,7295.02447 C264.385932,7293.53455 264.28433,7285.06174 263.090998,7283.18289"></path>
+                          </g>
+                        </g>
+                      </g>
                     </svg>
                   </a>
                 </div>
@@ -667,7 +645,7 @@
             <div class="subGrid">
               <div class="card">
                 <div class="cardTitle">
-                  <h3>What they wrote</h3>
+                  <h3>Custom status</h3>
                   <div class="smallMuted mono">updated <span id="updated">--:--</span></div>
                 </div>
                 <div class="bigLine" id="customStatus">—</div>
@@ -676,7 +654,7 @@
 
               <div class="card">
                 <div class="cardTitle">
-                  <h3>Playing / Activity</h3>
+                  <h3>Activity</h3>
                   <div class="smallMuted mono" id="activityType">—</div>
                 </div>
                 <div class="bigLine" id="activityName">—</div>
@@ -745,35 +723,27 @@
   const COUNT_KEY = "views";
   const $ = (id) => document.getElementById(id);
 
-  // hover tilt
-  const tilt = $("tilt");
-  const maxTilt = 7;
+  // ===== Lock copy / select / view-source shortcuts =====
+  (function lockDown(){
+    window.addEventListener("contextmenu", (e) => e.preventDefault(), { capture:true });
+    window.addEventListener("selectstart", (e) => e.preventDefault(), { capture:true });
+    window.addEventListener("dragstart", (e) => e.preventDefault(), { capture:true });
 
-  function setSpotlightVars(clientX, clientY){
-    const r = tilt.getBoundingClientRect();
-    const mx = ((clientX - r.left) / r.width) * 100;
-    const my = ((clientY - r.top) / r.height) * 100;
-    tilt.style.setProperty("--mx", mx + "%");
-    tilt.style.setProperty("--my", my + "%");
-  }
+    window.addEventListener("keydown", (e) => {
+      const k = (e.key || "").toLowerCase();
+      if (e.key === "F12") { e.preventDefault(); e.stopPropagation(); return; }
+      if (e.ctrlKey || e.metaKey) {
+        const blocked = ["u","s","p","c","x","v","a","f","i","j"];
+        if (blocked.includes(k)) {
+          e.preventDefault();
+          e.stopPropagation();
+          return;
+        }
+      }
+    }, { capture:true });
 
-  tilt.addEventListener("mousemove", (e) => {
-    const r = tilt.getBoundingClientRect();
-    const px = (e.clientX - r.left) / r.width;
-    const py = (e.clientY - r.top) / r.height;
-
-    const ry = (px - 0.5) * (maxTilt * 2);
-    const rx = (0.5 - py) * (maxTilt * 2);
-
-    tilt.style.transform = `perspective(900px) rotateX(${rx}deg) rotateY(${ry}deg) translateY(-2px)`;
-    setSpotlightVars(e.clientX, e.clientY);
-  });
-
-  tilt.addEventListener("mouseleave", () => {
-    tilt.style.transform = `perspective(900px) rotateX(0deg) rotateY(0deg) translateY(0px)`;
-    tilt.style.setProperty("--mx", "50%");
-    tilt.style.setProperty("--my", "50%");
-  });
+    window.addEventListener("dblclick", (e) => e.preventDefault(), { capture:true });
+  })();
 
   // clock + date
   function setClock(){
@@ -819,25 +789,19 @@
   // Pick activity (exclude Custom Status and Spotify)
   function pickMainActivity(activities){
     if(!Array.isArray(activities)) return null;
-    // Prefer "Playing" (type 0) that isn't Custom Status / Spotify
     const filtered = activities.filter(a => a && a.name && a.type !== 4 && a.name !== "Spotify");
     const playing = filtered.find(a => a.type === 0) || filtered[0];
     return playing || null;
   }
 
   function formatActivity(a){
-    if(!a) return {
-      type:"—", name:"—", details:"—"
-    };
-
+    if(!a) return { type:"—", name:"—", details:"—" };
     const typeMap = {0:"Playing",1:"Streaming",2:"Listening",3:"Watching",5:"Competing"};
     const t = typeMap[a.type] || "Activity";
-
     const name = a.name || "—";
     const bits = [];
     if(a.details) bits.push(a.details);
     if(a.state) bits.push(a.state);
-
     const details = bits.length ? bits.join(" • ") : "—";
     return { type:t, name, details };
   }
@@ -880,12 +844,10 @@
 
       applyStatus(d.discord_status || "offline");
 
-      // "what he wrote there" = Custom Status
       const custom = formatCustomStatus(d.activities);
       $("customStatus").textContent = custom;
-      $("customStatus2").textContent = custom === "—" ? "no custom status" : "custom status";
+      $("customStatus2").textContent = custom === "—" ? "no custom status set" : "custom status";
 
-      // "what he plays etc" = main activity
       const mainA = pickMainActivity(d.activities);
       const f = formatActivity(mainA);
       $("activityType").textContent = f.type;
@@ -969,13 +931,12 @@
     else minimize();
   }
 
-  // IMPORTANT: stop drag capture from killing clicks on buttons
+  // stop drag from stealing click on buttons
   function stopDragSteal(el){
     ["pointerdown","mousedown","touchstart"].forEach(ev=>{
       el.addEventListener(ev, (e)=>{ e.stopPropagation(); }, {passive:true});
     });
   }
-
   stopDragSteal($("btnMin"));
   stopDragSteal($("btnClose"));
 
@@ -983,7 +944,7 @@
   $("btnClose").addEventListener("click", (e) => { e.preventDefault(); e.stopPropagation(); closeWindow(); });
   $("appToggle").addEventListener("click", toggleFromTaskbar);
 
-  // draggable window
+  // standard draggable window (no tilt/parallax)
   const dragWrap = $("dragWrap");
   const titlebar = $("titlebar");
 
@@ -991,7 +952,6 @@
   function clamp(n, min, max){ return Math.max(min, Math.min(max, n)); }
 
   titlebar.addEventListener("pointerdown", (e) => {
-    // if click started on buttons, ignore
     if(e.target.closest && e.target.closest(".winbtn")) return;
     if(document.body.classList.contains("minimized") || document.body.classList.contains("closed")) return;
 
@@ -1001,6 +961,7 @@
     const rect = dragWrap.getBoundingClientRect();
     startX = e.clientX; startY = e.clientY;
 
+    // freeze current position so it won't "jump"
     dragWrap.style.left = rect.left + "px";
     dragWrap.style.top  = rect.top + "px";
     dragWrap.style.transform = "none";
@@ -1046,4 +1007,3 @@
 </script>
 </body>
 </html>
-
